--- a/data/projects.json
+++ b/data/projects.json
@@ -5,49 +5,39 @@
     {
       "id": "taco",
       "title": "TACO",
-      "description": "Advanced distributed system with real-time synchronization",
+      "description": "Commission management System for Insurance Agencies and Brokers",
       "category": "tech",
       "tags": ["Next.js", "TypeScript", "Real-time"],
-      "problem": "Need for a scalable solution to handle real-time data synchronization across distributed systems with minimal latency.",
-      "solution": "Built a robust distributed architecture using event-driven patterns and WebSocket connections for real-time updates. Implemented caching strategies and database optimization for high-throughput scenarios.",
+      "problem": "Insurance agencies and brokers face challenges in managing commissions efficiently, leading to delays and inaccuracies in payments. As well as spending excessive time on manual tracking and reporting.",
+      "solution": "Developed TACO, a web application that automates commission tracking, calculation, and reporting. It provides real-time updates and insights into commission statuses, improving transparency and efficiency.",
       "challenges": [
-        "Managing state consistency across multiple nodes",
-        "Optimizing database queries for performance at scale",
-        "Handling network failures and reconnection logic"
+        "Designing a scalable architecture to handle complex commission structures",
+        "Implementing real-time data synchronization across multiple users",
+        "Ensuring data security and compliance with industry regulations"
       ],
-      "techStack": ["Next.js", "TypeScript", "PostgreSQL", "WebSockets", "Redis"],
+      "techStack": [
+        "Next.js",
+        "TypeScript",
+        "PostgreSQL",
+        "WebSockets",
+        "Redis"
+      ],
       "link": "https://github.com"
     },
     {
       "id": "audiobook",
       "title": "AudioBookSync",
-      "description": "Seamless audiobook synchronization platform",
+      "description": "Seamless audiobook synchronization platform for Audible users",
       "category": "tech",
-      "tags": ["React", "Audio API", "Cloud"],
-      "problem": "Users struggled with syncing audiobook progress across devices, leading to lost progress and fragmented experience.",
-      "solution": "Developed a cloud-based sync system that tracks playback position, bookmarks, and notes across all devices. Implemented progressive sync with offline support.",
+      "tags": ["Next.js", "FFMPEG", "Cloud"],
+      "problem": "Users struggle with not actually owning the books they purchase on Audible, leading to issues when switching devices or platforms.",
+      "solution": "Developed a cloud-based sync system that allows users to upload their Audible audiobooks and sync playback progress across multiple devices.",
       "challenges": [
         "Syncing audio playback timestamps across devices accurately",
         "Handling offline scenarios with eventual consistency",
         "Optimizing cloud storage for media metadata"
       ],
-      "techStack": ["React", "Web Audio API", "AWS S3", "DynamoDB", "CloudFront"],
-      "link": "https://github.com"
-    },
-    {
-      "id": "voxel-engine",
-      "title": "Voxel Engine",
-      "description": "Real-time 3D voxel rendering with physics simulation",
-      "category": "game-dev",
-      "tags": ["Unreal Engine 5", "C++", "Voxels"],
-      "problem": "Existing voxel engines had poor performance and limited scalability for large-scale destructible environments.",
-      "solution": "Created a custom voxel engine in UE5 with GPU-accelerated rendering, implementing spatial partitioning for efficient chunk management and networked voxel replication.",
-      "challenges": [
-        "Implementing efficient voxel data structures with octrees",
-        "Replicating voxel changes over network with minimal bandwidth",
-        "Optimizing GPU memory usage for large environments"
-      ],
-      "techStack": ["Unreal Engine 5", "C++", "HLSL", "Replication Graph"],
+      "techStack": ["Next.js", "FastAPI", "PostgreSQL", "Docker", "FFMPEG"],
       "link": "https://github.com"
     },
     {
@@ -63,7 +53,13 @@
         "Managing SSL certificates and automatic renewal",
         "Implementing proper monitoring and alerting systems"
       ],
-      "techStack": ["Proxmox VE", "Docker", "Docker Compose", "Traefik", "Prometheus"],
+      "techStack": [
+        "Proxmox VE",
+        "Docker",
+        "Docker Compose",
+        "Traefik",
+        "Prometheus"
+      ],
       "link": "https://github.com"
     }
   ]
